// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ChatInput renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      [
        {
          "marginBottom": 0,
        },
        undefined,
      ],
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "paddingHorizontal": 20,
          "paddingVertical": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "minWidth": 130,
          },
          [
            {
              "flex": 1,
              "flexDirection": "column",
              "marginRight": 2,
              "minWidth": undefined,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": undefined,
              "backgroundColor": "#F2F4F7",
              "borderColor": "transparent",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 8,
            },
            {
              "minHeight": 80,
            },
            null,
            [
              {
                "alignItems": "center",
                "borderWidth": undefined,
                "marginVertical": 0,
                "maxHeight": 196,
                "minHeight": 38,
                "paddingVertical": 8,
                "width": "100%",
              },
              undefined,
            ],
          ]
        }
      >
        <TextInput
          accessibilityLabel="chatInputField"
          allowFontScaling={true}
          editable={true}
          multiline={true}
          numberOfLines={1}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9BA1B0"
          selectionColor="#2B78EE"
          style={
            [
              {
                "borderRadius": 8,
                "flex": 1,
                "outlineWidth": 0,
                "padding": 0,
                "paddingLeft": 18,
                "paddingRight": 16,
                "paddingVertical": 12,
                "textAlignVertical": "top",
              },
              {
                "color": "#20242D",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 20,
                "minHeight": 20,
              },
              [
                {
                  "paddingTop": 0,
                },
                undefined,
              ],
            ]
          }
          testID="TextInput"
          value="value"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#2B78EE",
          "borderRadius": 8,
          "height": 38,
          "justifyContent": "center",
          "marginLeft": 6,
          "opacity": 1,
          "width": 38,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#2B78EE",
            "fontFamily": "Neotis",
            "fontSize": 24,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInput renders correctly android 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "marginBottom": 0,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "paddingHorizontal": 20,
          "paddingVertical": 16,
          "width": "100%",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "minWidth": 130,
          },
          [
            {
              "flex": 1,
              "flexDirection": "column",
              "marginRight": 2,
              "minWidth": undefined,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": undefined,
              "backgroundColor": "#F2F4F7",
              "borderColor": "transparent",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 8,
            },
            {
              "minHeight": 80,
            },
            null,
            [
              {
                "alignItems": "center",
                "borderWidth": undefined,
                "marginVertical": 0,
                "maxHeight": 196,
                "minHeight": 38,
                "paddingVertical": 8,
                "width": "100%",
              },
              undefined,
            ],
          ]
        }
      >
        <TextInput
          accessibilityLabel="chatInputField"
          allowFontScaling={true}
          editable={true}
          multiline={true}
          numberOfLines={1}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9BA1B0"
          selectionColor="#2B78EE"
          style={
            [
              {
                "borderRadius": 8,
                "flex": 1,
                "outlineWidth": 0,
                "padding": 0,
                "paddingLeft": 18,
                "paddingRight": 16,
                "paddingVertical": 12,
                "textAlignVertical": "top",
              },
              [
                {
                  "color": "#20242D",
                  "fontSize": 16,
                  "padding": 0,
                },
              ],
              [
                {
                  "paddingTop": 0,
                },
                undefined,
              ],
            ]
          }
          testID="TextInput"
          value="value"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#2B78EE",
          "borderRadius": 8,
          "height": 38,
          "justifyContent": "center",
          "marginLeft": 6,
          "opacity": 1,
          "width": 38,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#2B78EE",
            "fontFamily": "Neotis",
            "fontSize": 24,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInput renders correctly with containerStyle, style 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      [
        {
          "marginBottom": 0,
        },
        {
          "flex": 1,
        },
      ],
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
          "paddingHorizontal": 20,
          "paddingVertical": 16,
          "width": "100%",
        },
        {
          "flex": 1,
        },
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "minWidth": 130,
          },
          [
            {
              "flex": 1,
              "flexDirection": "column",
              "marginRight": 2,
              "minWidth": undefined,
            },
            undefined,
          ],
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": undefined,
              "backgroundColor": "#F2F4F7",
              "borderColor": "transparent",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 8,
            },
            {
              "minHeight": 80,
            },
            null,
            [
              {
                "alignItems": "center",
                "borderWidth": undefined,
                "marginVertical": 0,
                "maxHeight": 196,
                "minHeight": 38,
                "paddingVertical": 8,
                "width": "100%",
              },
              undefined,
            ],
          ]
        }
      >
        <TextInput
          accessibilityLabel="chatInputField"
          allowFontScaling={true}
          editable={true}
          multiline={true}
          numberOfLines={1}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9BA1B0"
          selectionColor="#2B78EE"
          style={
            [
              {
                "borderRadius": 8,
                "flex": 1,
                "outlineWidth": 0,
                "padding": 0,
                "paddingLeft": 18,
                "paddingRight": 16,
                "paddingVertical": 12,
                "textAlignVertical": "top",
              },
              {
                "color": "#20242D",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 20,
                "minHeight": 20,
              },
              [
                {
                  "paddingTop": 0,
                },
                undefined,
              ],
            ]
          }
          testID="TextInput"
          value="value"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#2B78EE",
          "borderRadius": 8,
          "height": 38,
          "justifyContent": "center",
          "marginLeft": 6,
          "opacity": 1,
          "width": 38,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#2B78EE",
            "fontFamily": "Neotis",
            "fontSize": 24,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
